# KMR

./: CONTRIBUTEING.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  gen.sh  test.kafka
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml
.kafka_payloads/: tracks.kafka
config/: default.toml
src/: heartbeat.rs  kafka.rs  main.rs  settings.rs
src/heartbeat/: multicaster.rs
