[package]
name = "kmr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = "0.4"
rdkafka = { version = "0.25" }
log = "0.4.8"
tokio = { version = "1.14.0", features = ["full"] }

[dependencies.simple_logger]
features = ["colors", "threads", "timestamps", "stderr"]
