[package]
name = "kmr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = "0.4"
rdkafka = { version = "0.25" }
log = "0.4.8"
tokio = { version = "1.14.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }

[dependencies.simple_logger]
features = ["colors", "threads", "timestamps", "stderr"]
